#PK-1019 Update automation email settings

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/AutomaticEmailing.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/AutomaticEmailing.razor
@@ -37,7 +37,7 @@
                   SortChanged="OnSortChange">
             <DataGridColumns>
                  <DataGridColumn Field="@nameof(AutomaticEmailDto.TradeName)"
-                                Caption="@L["TradeName"]">
+                                Caption="@L["EmailSubject"]">
                 </DataGridColumn>
                  <DataGridColumn Field="@nameof(AutomaticEmailDto.StartDate)"
                                 Caption="@L["StartDate"]">
