--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/EditAutomaticEmails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/EditAutomaticEmails.razor
@@ -42,7 +42,7 @@
          <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        @L["TradeName"]
+                    @L["EmailSubject"]
                         <span class="text-danger"> *</span>
                     </div>
                     <div class="col-7">
@@ -72,7 +72,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
-                        @L["SendInterval"]
+                    @L["SendDateRange"]
                         <span class="text-danger"> *</span>
                     </div>
                     <div class="col-3">
@@ -98,7 +98,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
-                        @L["SelectGroupBuys"]
+                        @L["SelectGroupBuy"]
                         <span class="text-danger"> *</span>
                     </div>
                     <div class="col-7">
@@ -120,7 +120,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
-                        @L["RecurrenceType"]
+                        @L["SendFrequency"]
                         <span class="text-danger"> *</span>
                         @if(Model.RecurrenceType == RecurrenceType.Weekly)
                         {
