--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/CreateAutomaticEmails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/CreateAutomaticEmails.razor
@@ -41,7 +41,7 @@
          <div class="container">
              <div class="row">
                  <div class="col-2">
-                     @L["TradeName"]
+                     @L["EmailSubject"]
                      <span class="text-danger"> *</span>
                  </div>
                  <div class="col-7">
@@ -71,7 +71,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
-                        @L["SendInterval"]
+                        @L["SendDateRange"]
                         <span class="text-danger"> *</span>
                     </div>
                     <div class="col-3">
@@ -97,7 +97,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
-                        @L["SelectGroupBuys"]
+                        @L["SelectGroupBuy"]
                         <span class="text-danger"> *</span>
                     </div>
                     <div class="col-7">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
-                        @L["RecurrenceType"]
+                        @L["SendFrequency"]
                         <span class="text-danger"> *</span>
                         @if(Model.RecurrenceType == RecurrenceType.Weekly)
                         {
