Commit for pk-986

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/OrderDetails.razor
@@ -2250,13 +2250,13 @@
                                         <div class="btn-group me-1" role="group" aria-label="Button group with nested dropdown">
                                             @if (CheckForDeliveryMethod(context.DeliveryMethod))
                                             {
-                                                <Button Type="ButtonType.Button" Clicked="()=>CreateOrderLogistics(context)" Class="btn btn-primary">@L["ShipmentNotify"]</Button>
+                                                <Button Disabled="context.DeliveryStatus!=DeliveryStatus.Processing&&context.DeliveryStatus!=DeliveryStatus.ToBeShipped" Type="ButtonType.Button" Clicked="()=>CreateOrderLogistics(context)" Class="btn btn-primary">@L["ShipmentNotify"]</Button>
                                             }
                                             else
                                             {
-                                                <Button Disabled Type="ButtonType.Button" Clicked="()=>CreateOrderLogistics(context)" Class="btn btn-primary">@L["ShipmentNotify"]</Button>
+                                                <Button  Disabled Type="ButtonType.Button" Clicked="()=>CreateOrderLogistics(context)" Class="btn btn-primary">@L["ShipmentNotify"]</Button>
                                             }
-                                            <Button Type="ButtonType.Button" Clicked="() => OpenShipmentModal(context)" style="margin-left: 1px;" Class="btn btn-primary"><Icon Class="dropdown-toggle"></Icon></Button>
+                                            <Button Disabled="context.DeliveryStatus!=DeliveryStatus.Processing&&context.DeliveryStatus!=DeliveryStatus.ToBeShipped" Type="ButtonType.Button" Clicked="() => OpenShipmentModal(context)" style="margin-left: 1px;" Class="btn btn-primary"><Icon Class="dropdown-toggle"></Icon></Button>
 
 
                                         </div>
