#PK-1028 Enhance Member List Page

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/Members.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/Members.razor
@@ -67,7 +67,7 @@
                             </Div>
                             <Div>
                                 <Div>
-                                    <Button Class="btn-link hyperlink" Clicked="() => EditMember(context)">@context.UserName</Button>
+                                    <Button Class="btn-link hyperlink fs-large" Clicked="() => EditMember(context)">@context.UserName</Button>
                                 </Div>
                                 <Span>@context.Email</Span>
                             </Div>
