--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -561,6 +561,7 @@
     padding: 0 !important;
     font-weight: 500;
     font-size: 0.85rem !important;
+    text-align: left;
 }
 
     .b-table .btn-link.hyperlink.fs-large {
