--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -46,7 +46,7 @@
         <div>
             <div class="row">
                 <div class="col-2">
-                    <label>@L["ItemName"]</label>
+                    <label>@L["ItemName"]<span class="text-danger">*</span></label>
                 </div>
                 <div class="col-10">
                     <Addons>
@@ -169,7 +169,7 @@
                     <div class="col-12">
                         <Addons>
                             <Addon AddonType="AddonType.Body">
-                                <TextEdit Placeholder="@L["ItemDescriptionTitle"]" @bind-Text="@CreateItemDto.ItemDescriptionTitle" />
+                                <TextEdit MaxLength="60" Placeholder="@L["ItemDescriptionTitle"]" @bind-Text="@CreateItemDto.ItemDescriptionTitle" />
                             </Addon>
                             <Addon AddonType="AddonType.End">
                                 <AddonLabel Style="background-color: #f5f5f7">
@@ -643,7 +643,7 @@
                     </div>
                     <div class="row">
                         <div class="col-2 text-end">
-                            <label class="pt-2">@L["ItemTemperature"]</label>
+                            <label class="pt-2">@L["ItemTemperature"]<span class="text-danger">*</span></label>
                         </div>
                         <div class="col-4">
                             <Select TValue="ItemStorageTemperature?" Class="form-select"
